# distro

./: .rustfmt.toml  Cargo.toml  README.md  clippy.toml  dev-modulesd-setup.sh  dev-portal-setup.sh  dev-portal-teardown.sh  install-modulesd.sh  install-portal.sh  justfile  reset-sway-portals.sh  start-dev.sh  start-settings.sh  sync-ui-kit.sh  test-shell.sh  workspace-deps.toml
.github/workflows/: ci-template.yml
tests/: integration_compositor.rs
vm/: cloud-init-user-data.yaml  dev.sh  install-aya-toolchain.sh  setup-vm.sh  test-vm.sh
