[package]
name = "distro"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
prost = "0.13"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }

[build-dependencies]
prost-build = "0.13"
